src/objects/AMS_Facility__c.object
<CustomObject>
    <description>Facility custom object to accompany the cargo form, ISSP_AMS_Cargo_Form</description>
    <fields>
        <fullName>AMS_Online_Accreditation__c</fullName>
        <label>AMS Online Accreditation</label>
        <referenceTo>AMS_Pax_Accreditation_Form__c</referenceTo>
        <relationshipLabel>AMS_Facilities</relationshipLabel>
        <relationshipName>AMS_Facilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>A_sprinkler_system__c</fullName>
        <description>A sprinkler system</description>
        <label>A sprinkler system</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accessibility_to_vehicles__c</fullName>
        <description>* f) Accessibility to vehicles</description>
        <label>Accessibility to vehicles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alarm_system__c</fullName>
        <description>* Alarm system</description>
        <label>* Alarm system</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>An_alarm_system__c</fullName>
        <description>An alarm system</description>
        <label>An alarm system</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_functions_involved_in_preperations__c</fullName>
        <description>* If any of the functions involved in the preparation of cargo ready for carriage are outsourced or leased by your company, please provide details</description>
        <label>Any functions involved in preperations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Are_Consignments_made_ready__c</fullName>
        <description>* Are consignments made ready for carriage at this service point?</description>
        <label>Are consignments made ready</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_used_for_Air_freight__c</fullName>
        <description>* b) Area used for Air freight</description>
        <label>Area used for Air freight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automated_export_accounting__c</fullName>
        <description>* Automated export accounting</description>
        <label>* Automated export accounting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Automated_export_documentation__c</fullName>
        <description>* Automated export documentation</description>
        <label>* Automated export documentation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ceiling_height__c</fullName>
        <description>* d) Ceiling height</description>
        <label>Ceiling height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_agreement_expires__c</fullName>
        <description>* Date agreement expires</description>
        <label>* Date agreement expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_lease_expires__c</fullName>
        <description>* Date lease expires</description>
        <label>* Date lease expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_location_opened_for_business__c</fullName>
        <description>Date on which this location was opened for business</description>
        <label>Date location opened for business</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distance_from_nearest_Airport__c</fullName>
        <label>Distance from nearest Airport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance_from_nearest_Office__c</fullName>
        <label>Distance from nearest Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Areas__c</fullName>
        <description>* c) Doc Areas</description>
        <label>Doc Areas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_of_contract__c</fullName>
        <description>* Duration of contract</description>
        <label>* Duration of contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_of_lease__c</fullName>
        <description>* Duration of lease</description>
        <label>* Duration of lease</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>* Email</description>
        <label>* Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Forklift_Max_Weight__c</fullName>
        <label>Forklift Max Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forklift_Number__c</fullName>
        <label>Forklift Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forklift_Type__c</fullName>
        <label>Forklift Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Public_Opening_Hours__c</fullName>
        <label>General Public Opening Hours</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_the_office_open_to_the_general_public__c</fullName>
        <description>Is the office open to the general public ?</description>
        <label>Is the office open to the general public</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_office_warehouse_leased__c</fullName>
        <description>Is the office / warehouse leased?</description>
        <label>Is the office / warehouse leased?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_warehouse_sub_contracted__c</fullName>
        <description>Is the warehouse sub-contracted?</description>
        <label>Is the warehouse sub-contracted?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_warehouse_open_to_general_public__c</fullName>
        <description>Is the warehouse open to the general public?</description>
        <label>Is warehouse open to general public?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>List_airports_serviced_by_this_facility__c</fullName>
        <description>List airports serviced by this facility</description>
        <label>List airports serviced by this facility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_lessor__c</fullName>
        <description>* Name of lessor</description>
        <label>* Name of lessor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_sub_contractor__c</fullName>
        <description>* Name of sub-contractor</description>
        <label>* Name of sub-contractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_overhead_doors__c</fullName>
        <description>* g) Number  of overhead doors</description>
        <label>Number  of overhead doors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Full_Address__c</fullName>
        <description>Office Full Address</description>
        <label>Office Full Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_equipment_Max_Weight__c</fullName>
        <label>Other equipment Max Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_equipment_Number__c</fullName>
        <label>Other equipment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_equipment_Type__c</fullName>
        <label>Other equipment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_pertinent_details__c</fullName>
        <description>* Other pertinent details</description>
        <label>* Other pertinent details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scales_Max_Weight__c</fullName>
        <label>Scales Max Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scales_Number__c</fullName>
        <label>Scales Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scales_Type__c</fullName>
        <label>Scales Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <description>* Telephone</description>
        <label>* Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telex__c</fullName>
        <description>Telex</description>
        <label>Telex</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Area__c</fullName>
        <description>* a) Total Area</description>
        <label>Total Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>* e) Type</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Premises__c</fullName>
        <label>Type of Premises</label>
        <picklist>
            <picklistValues>
                <fullName>Office to be Investigated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse to be Investigated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Warehouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Website</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>AMS_Facility</label>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AMS_Facilities</pluralLabel>
    <recordTypes>
        <fullName>Office</fullName>
        <active>true</active>
        <description>Office record type for facilities</description>
        <label>Office</label>
    </recordTypes>
    <recordTypes>
        <fullName>Warehouse</fullName>
        <active>true</active>
        <description>Warehouse Record type for Facilities</description>
        <label>Warehouse</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>